# tools

./: .prototools  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: ci.yml  release.yml
crates/node-common/src/: node_dist.rs  package_json.rs
docs/: release.md
scripts/: generatePythonReleases.mjs
toolchains/node/: Cargo.toml
toolchains/node/src/: config.rs  lib.rs  moon.rs
tools/bun/: CHANGELOG.md  Cargo.toml  README.md
tools/bun/src/: config.rs  proto.rs
tools/bun/tests/: download_test.rs  metadata_test.rs  shims_test.rs  versions_test.rs
tools/bun/tests/snapshots/: shims_test__creates_shims.snap
tools/deno/: CHANGELOG.md  Cargo.toml  README.md
tools/deno/src/: config.rs  proto.rs
tools/deno/tests/: download_test.rs  metadata_test.rs  shims_test.rs  versions_test.rs
tools/deno/tests/snapshots/: shims_test__creates_shims.snap
tools/go/: CHANGELOG.md  Cargo.toml  README.md
tools/go/src/: config.rs  lib.rs  proto.rs  version.rs
tools/go/tests/: download_test.rs  metadata_test.rs  shims_test.rs  versions_test.rs
tools/go/tests/snapshots/: shims_test__creates_shims.snap
tools/internal-schema/: CHANGELOG.md  Cargo.toml  README.md
tools/internal-schema/src/: lib.rs  proto.rs  schema.rs
tools/internal-schema/tests/: download_test.rs  metadata_test.rs  shims_test.rs  versions_test.rs
tools/internal-schema/tests/__fixtures__/schemas/: bins.toml  primary-platform.toml  primary.toml  secondary.toml  version-pattern.toml
tools/internal-schema/tests/snapshots/: shims_test__creates_shims.snap
tools/node/: CHANGELOG.md  Cargo.toml  README.md
tools/node-depman/: CHANGELOG.md  Cargo.toml  README.md
tools/node-depman/src/: config.rs  lib.rs  npm_registry.rs  proto.rs
tools/node-depman/tests/: download_test.rs  hooks_test.rs  metadata_test.rs  shims_test.rs  versions_test.rs
tools/node-depman/tests/snapshots/: shims_test__npm__creates_shims.snap  shims_test__pnpm__creates_shims.snap  shims_test__yarn__creates_shims.snap
tools/node/src/: config.rs  lib.rs  proto.rs
tools/node/tests/: download_test.rs  hooks_test.rs  metadata_test.rs  shims_test.rs  versions_test.rs
tools/node/tests/snapshots/: shims_test__creates_shims.snap
tools/proto/: CHANGELOG.md  Cargo.toml  README.md
tools/proto/src/: proto.rs
tools/python/: CHANGELOG.md  Cargo.toml  README.md  releases.json
tools/python/src/: lib.rs  proto.rs  version.rs
tools/python/tests/: download_test.rs  metadata_test.rs  shims_test.rs  versions_test.rs
tools/python/tests/snapshots/: shims_test__creates_shims.snap
tools/rust/: CHANGELOG.md  Cargo.toml  README.md
tools/rust/src/: helpers.rs  lib.rs  proto.rs  toolchain_toml.rs
tools/rust/tests/: download_test.rs  metadata_test.rs  shims_test.rs  versions_test.rs
