[workspace]
resolver = "2"
members = ["crates/*", "tools/deno"]

[workspace.dependencies]
# Common
extism-pdk = { version = "1.2.1" }
proto_pdk = { version = "0.23.0" }
proto_pdk_api = { version = "0.23.0" }
proto_pdk_test_utils = { version = "0.27.0" }
regex = { version = "1.10.6", default-features = false, features = ["std"] }
schematic = { version = "0.17.2", default-features = false, features = [
	"schema",
] }
serde = "1.0.208"
serde_json = "1.0.125"
serial_test = "3.1.1"
starbase_sandbox = "0.7.2"
tokio = { version = "1.39.2", features = ["full"] }
toml = { version = "0.8.19", default-features = false, features = ["parse"] }

# Node.js
nodejs_package_json = "0.2.0"

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "s"
panic = "abort"
