[workspace]
resolver = "2"
members = ["crates/*", "tools/*"]

[workspace.dependencies]
# Common
extism-pdk = { version = "1.3.0" }
proto_pdk = { version = "0.25.0", path = "../proto/crates/pdk" }
proto_pdk_api = { version = "0.24.0", path = "../proto/crates/pdk-api" }
proto_pdk_test_utils = { version = "0.30.0", path = "../proto/crates/pdk-test-utils" }
regex = { version = "1.11.1", default-features = false, features = ["std"] }
schematic = { version = "0.17.5", default-features = false, features = [
	"schema",
] }
serde = "1.0.214"
serde_json = "1.0.132"
serial_test = "3.1.1"
starbase_sandbox = "0.7.4"
tokio = { version = "1.41.0", features = ["full"] }
toml = { version = "0.8.19", default-features = false, features = ["parse"] }

# Node.js
nodejs_package_json = "0.3.0"

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "s"
panic = "abort"
