[package]
name = "node_toolchain"
version = "0.0.1"
edition = "2021"
license = "MIT"
publish = false

[package.metadata.release]
pre-release-replacements = [
	{ file = "./CHANGELOG.md", search = "Unreleased", replace = "{{version}}" },
]

[lib]
crate-type = ["cdylib"]

[dependencies]
node_tool = { path = "../../tools/node" }
extism-pdk = { workspace = true }
moon_pdk = { workspace = true }
serde = { workspace = true }

[features]
default = ["wasm"]
wasm = ["node_tool/wasm"]
