[package]
name = "bun_tool"
version = "0.12.3"
edition = "2021"
license = "MIT"
publish = false

[package.metadata.release]
pre-release-replacements = [
	{ file = "./CHANGELOG.md", search = "Unreleased", replace = "{{version}}" },
]

[lib]
crate-type = ['cdylib']

[dependencies]
extism-pdk = { workspace = true }
proto_pdk = { workspace = true }
schematic = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
proto_pdk_test_utils = { workspace = true }
starbase_sandbox = { workspace = true }
tokio = { workspace = true }

[features]
default = ["wasm"]
wasm = []
