[package]
name = "schema_tool"
version = "0.16.0"
edition = "2021"
license = "MIT"
publish = false

[package.metadata.release]
pre-release-replacements = [
	{ file = "./CHANGELOG.md", search = "Unreleased", replace = "{{version}}" },
]

[lib]
crate-type = ['cdylib']

[dependencies]
extism-pdk = { workspace = true }
proto_pdk = { workspace = true }
regex = { workspace = true, features = ["unicode-perl"] }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
proto_pdk_test_utils = { workspace = true, features = ["schema"] }
starbase_sandbox = { workspace = true }
tokio = { workspace = true }

[features]
default = ["wasm"]
wasm = []
