[package]
name = "node_depman_tool"
version = "0.13.0"
edition = "2021"
license = "MIT"
publish = false

[package.metadata.release]
pre-release-replacements = [
	{ file = "./CHANGELOG.md", search = "Unreleased", replace = "{{version}}" },
]

[lib]
crate-type = ['cdylib']

[dependencies]
node_common = { path = "../../crates/node-common" }
extism-pdk = { workspace = true }
nodejs_package_json = { workspace = true }
proto_pdk = { workspace = true }
regex = { workspace = true, features = ["unicode"] }
schematic = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
proto_pdk_api = { workspace = true }
proto_pdk_test_utils = { workspace = true }
serde_json = { workspace = true }
starbase_sandbox = { workspace = true }
tokio = { workspace = true }

[features]
default = ["wasm"]
wasm = []
